# go-plugin-rs

./: Cargo.toml  build.rs
src/proto/: mod.rs  proto.rs
