[package]
name = "go-plugin-rs"
version = "0.2.0"
authors = ["DerekStrickland <1111455+DerekStrickland@users.noreply.github.com>", "Raito Bezarius <masterancpp@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.2"
env_logger = "0.9.0"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4.14"
prost = "*"
prost-types = "*"
rmp-serde = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tokio-test = "0.4.2"
tonic = "*"
tonic-health = "*"

[build-dependencies]
prost = "*"
prost-build = "*"
protoc-rust = "*"
tonic-build = "*"
prost-types = "*"

# server binary
[[bin]]
name = "go-plugin-rs"
path = "src/main.rs"

# client binary
[[bin]]
name = "test-client"
path = "src/test_client.rs"
